<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/home_drawer">

    <fragment
        android:id="@+id/home_drawer"
        android:name="com.example.aplicaciondisenofuncionamiento.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/editarPerfil_drawer1"
        android:name="com.example.aplicaciondisenofuncionamiento.ui.editar_perfil.EditarPerfilFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_editarPerfil" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.aplicaciondisenofuncionamiento.ui.Ajustes.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>